syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "BlueBellDollsServiceCore.proto";

option csharp_namespace = "BlueBellDolls.Grpc";
package bluebelldolls.grpc;

service BlueBellDollsService {
	//
	rpc GetActiveLitters(google.protobuf.Empty) returns (GetLittersResponce);
	//
	rpc GetActiveCatsByGender(google.protobuf.BoolValue) returns (GetFemaleCatsResponce);
}
